--- a/the-best-controller-trello/package.json
+++ b/the-best-controller-trello/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "body-parser": "^1.18.3",
+    "dotenv": "^6.1.0",
+    "express": "^4.16.4",
+    "http": "0.0.0",
+    "xmlhttprequest": "^1.8.0"
   }
 }
