huddle board chrome extension

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -10,5 +10,5 @@
     "page_action": {
       "default_popup": "huddle_popup.html"
     },
-    "permissions": ["activeTab", "declarativeContent", "desktopCapture"]
+    "permissions": ["activeTab", "declarativeContent"]
   }
